--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
         "start": "npx serve@latest ./build"
     },
     "dependencies": {
+        "@ant-design/v5-patch-for-react-19": "^1.0.3",
+        "antd": "^5.26.4",
+        "axios": "^1.10.0",
         "next": "^15.3.5",
-        "react": "^19.1.0"
+        "react": "^19.1.0",
+        "shortid": "^2.2.17"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.11",
